@@ -19,6 +19,7 @@
 /******************************************************************************
 			     Include header files
 ******************************************************************************/
+#include "config.h"
 #include "globus_common_include.h"
 #include "globus_thread_common.h"
 #include "globus_i_thread.h"
