@@ -6,7 +6,7 @@
 
 Name:		globus-common
 %global _name %(tr - _ <<< %{name})
-Version:	15.1
+Version:	15.2
 Release:	1%{?dist}
 Summary:	Globus Toolkit - Common Library
 
@@ -201,6 +201,9 @@ rm -rf $RPM_BUILD_ROOT
 %{_docdir}/%{name}-%{version}/html/*
 
 %changelog
+* Mon Jan 06 2013 Globus Toolkit <support@globus.org> - 15.2-1
+- fix missing include of config.h in some .c files
+
 * Fri Dec 20 2013 Globus Toolkit <support@globus.org> - 15.1-1
 - Fix issue with test output
 - Explicitly check for c99 features
